# HashTac

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs  tic_tac_toe_sails_client.rs
docs/plans/: 2026-04-05-tic-tac-toe-architecture.md  2026-04-05-tic-tac-toe-spec.md  2026-04-05-tic-tac-toe-tasks.md
frontend/frontend/: package-lock.json
frontend/frontend/src/: App.tsx  index.css
frontend/frontend/src/assets/: tic_tac_toe_sails_client.idl
frontend/frontend/src/components/: Header.tsx  NetworkSelector.tsx
frontend/frontend/src/lib/: sails-client.ts
frontend/frontend/src/providers/: chain-provider.tsx
frontend/scripts/: scaffold-client.ts
src/: lib.rs
tests/: gtest.rs
